[gd_scene load_steps=4 format=3 uid="uid://bbp0v2aoglhrr"]

[ext_resource type="Theme" uid="uid://dgt5fjkytx07d" path="res://assets/resources/menu_theme.tres" id="1_1c701"]
[ext_resource type="Script" path="res://scenes/menu/GraphicsSettings.gd" id="2_lsij7"]

[sub_resource type="LabelSettings" id="LabelSettings_2yad8"]
font_size = 64

[node name="GraphicsSettings" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1c701")
script = ExtResource("2_lsij7")

[node name="MainOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MainOptions"]
layout_mode = 2
text = "Graphics Settings"
label_settings = SubResource("LabelSettings_2yad8")

[node name="Back" type="Button" parent="MainOptions"]
layout_mode = 2
text = "Back
"

[node name="Restore" type="Button" parent="MainOptions"]
layout_mode = 2
text = "Restore Default Settings
"

[node name="DisplayOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer4" type="Label" parent="DisplayOptions"]
layout_mode = 2
text = " 
"

[node name="Label" type="Label" parent="DisplayOptions"]
layout_mode = 2
text = "Render Scale"

[node name="RenderScale" type="HSlider" parent="DisplayOptions"]
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.05
value = 1.0

[node name="RenderScaleValue" type="Label" parent="DisplayOptions"]
layout_mode = 2
text = "1.0
"
horizontal_alignment = 1

[node name="Fullscreen" type="CheckBox" parent="DisplayOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="ReflectionOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer4" type="Label" parent="ReflectionOptions"]
layout_mode = 2
text = " 
"

[node name="Label2" type="Label" parent="ReflectionOptions"]
layout_mode = 2
text = "Reflection Quality"

[node name="ReflectionQuality" type="HSlider" parent="ReflectionOptions"]
layout_mode = 2
max_value = 512.0
step = 16.0
value = 256.0
rounded = true

[node name="ReflectionQualityValue" type="Label" parent="ReflectionOptions"]
layout_mode = 2
text = "256"
horizontal_alignment = 1

[node name="EnableReflections" type="CheckBox" parent="ReflectionOptions"]
layout_mode = 2
button_pressed = true
text = "Enable Reflections"

[node name="LightOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer" type="Label" parent="LightOptions"]
layout_mode = 2
text = " 
"

[node name="Label2" type="Label" parent="LightOptions"]
layout_mode = 2
text = "Ambient Light Level"

[node name="AmbientLight" type="HSlider" parent="LightOptions"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.2

[node name="AmbientLightValue" type="Label" parent="LightOptions"]
layout_mode = 2
text = "0.2"
horizontal_alignment = 1

[node name="EnableSSIL" type="CheckBox" parent="LightOptions"]
layout_mode = 2
text = "Enable Indirect Lighting (SSIL)"

[node name="RenderDistanceOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer" type="Label" parent="RenderDistanceOptions"]
layout_mode = 2
text = " 
"

[node name="Label3" type="Label" parent="RenderDistanceOptions"]
layout_mode = 2
text = "Render Distance
"

[node name="RenderDistance" type="HSlider" parent="RenderDistanceOptions"]
layout_mode = 2
min_value = 0.5
max_value = 5.0
step = 0.5
value = 1.5

[node name="RenderDistanceValue" type="Label" parent="RenderDistanceOptions"]
layout_mode = 2
text = "x1"
horizontal_alignment = 1

[node name="FogOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer3" type="Label" parent="FogOptions"]
layout_mode = 2
text = " 
"

[node name="Label5" type="Label" parent="FogOptions"]
layout_mode = 2
text = "Fog
"

[node name="EnableFog" type="CheckBox" parent="FogOptions"]
layout_mode = 2
button_pressed = true
text = "Enable Fog"

[node name="FPSOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer2" type="Label" parent="FPSOptions"]
layout_mode = 2
text = " 
"

[node name="Label4" type="Label" parent="FPSOptions"]
layout_mode = 2
text = "Maximum FPS
"

[node name="MaxFPS" type="HSlider" parent="FPSOptions"]
layout_mode = 2
min_value = 20.0
max_value = 240.0
step = 5.0
value = 60.0
rounded = true

[node name="MaxFPSValue" type="Label" parent="FPSOptions"]
layout_mode = 2
text = "60"
horizontal_alignment = 1

[node name="VSync" type="CheckBox" parent="FPSOptions"]
layout_mode = 2
text = "Enable V-Sync"

[node name="LimitFPS" type="CheckBox" parent="FPSOptions"]
layout_mode = 2
text = "Limit FPS"

[node name="PostProcessingOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer3" type="Label" parent="PostProcessingOptions"]
layout_mode = 2
text = " 
"

[node name="Label5" type="Label" parent="PostProcessingOptions"]
layout_mode = 2
text = "Post-Processing Effect
"

[node name="PostProcessingEffect" type="OptionButton" parent="PostProcessingOptions"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "None"
popup/item_1/text = "CRT Filter"
popup/item_1/id = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MainOptions/Back" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MainOptions/Restore" to="." method="_on_restore_pressed"]
[connection signal="value_changed" from="DisplayOptions/RenderScale" to="." method="_on_render_scale_value_changed"]
[connection signal="toggled" from="DisplayOptions/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="ReflectionOptions/ReflectionQuality" to="." method="_on_reflection_quality_value_changed"]
[connection signal="toggled" from="ReflectionOptions/EnableReflections" to="." method="_on_enable_reflections_toggled"]
[connection signal="value_changed" from="LightOptions/AmbientLight" to="." method="_on_ambient_light_value_changed"]
[connection signal="toggled" from="LightOptions/EnableSSIL" to="." method="_on_enable_ssil_toggled"]
[connection signal="value_changed" from="RenderDistanceOptions/RenderDistance" to="." method="_on_render_distance_value_changed"]
[connection signal="toggled" from="FogOptions/EnableFog" to="." method="_on_enable_fog_toggled"]
[connection signal="value_changed" from="FPSOptions/MaxFPS" to="." method="_on_max_fps_value_changed"]
[connection signal="toggled" from="FPSOptions/VSync" to="." method="_on_vsync_toggled"]
[connection signal="toggled" from="FPSOptions/LimitFPS" to="." method="_on_limit_fps_toggled"]
[connection signal="item_selected" from="PostProcessingOptions/PostProcessingEffect" to="." method="_on_post_processing_effect_item_selected"]
